funcionamento do caarrinho e correção dos erros de imagem e bug da api